# test_shop

./:  playwright.config.js  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
__tests__/: dotenv_.py  test_views.py
__tests__/tests_cart_for_buy/: test_rewrite_fields.py  test_views.py
__tests__/tests_inventory_page/: test_views.py
__tests__/tests_main_page/: test_views.py
